# Multi_Agents

./: .env  README.md  pyproject.toml
src/multiagent/: __init__.py  main.py
